# Process-Analyzer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ProcessQuery/: ProcessQuery.cpp  ProcessQuery.h
src/gui/ProcessAnalzyerGUI/: ProcessAnalzyerGUI.sln
src/gui/ProcessAnalzyerGUI/ProcessAnalzyerGUI/: App.xaml  App.xaml.cs  ExternalController.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcessAnalzyerGUI.csproj  ProcessQuery.exp
src/gui/Process_Analyzer_gui/: Process_Analyzer_gui.sln
src/gui/Process_Analyzer_gui/Process_Analyzer_gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcessAnalyzer.xaml  ProcessAnalyzer.xaml.cs  ProcessQuery.lib
